Fix up the scrollbars.

--- a/resources/main.scss
+++ b/resources/main.scss
@@ -26,6 +26,8 @@
 }
 
 html {
+    overflow: hidden;
+
     // For scrolling to work cleanly on iOS, we need the main scroller to be at the
     // top and not inside an absolute element, or else it gets confused and scrolling
     // randomly gets stuck.
@@ -148,40 +150,29 @@ html {
 // use.  It also keeps the weirdness of the scrollbar updating as we add thumbs from being visible
 // (scrollbars as a concept don't mix well with dynamic content).
 html {
-    --scrollbar-width: 18px;
-    --scrollbar-thumb-width: 4px;
-    --scrollbar-color: rgba(0,0,0,0);
-    --scrollbar-hover-color: #888;
-
-    // Make scrollbars other than the top-level document one narrower and not hidden.
-    > body > * {
-        --scrollbar-width: 10px;
-        --scrollbar-thumb-width: 1px;
-        --scrollbar-color: var(--scrollbar-hover-color);
+    // Use a slightly thicker scrollbar for the search results scroller, and set the non-hover color
+    // so it blends in with the dark noise background unless it's hovered.
+    .search-results::-webkit-scrollbar {
+        width: 10px;
+        background-color: rgba(30,30,30,1); // mostly blends in with the dark noise background
     }
 
     ::-webkit-scrollbar {
-        width: var(--scrollbar-width);
-        background-color: var(--scrollbar-color);
-        &:hover { background-color: var(--scrollbar-hover-color); }
+        width: 8px;
+        background-color: #888;
+        &:hover { background-color: #888; }
     }
 
     ::-webkit-scrollbar-thumb {
         transition: background-color .25s;
-        background-color: rgba(30,30,30,1); // mostly blends in with the dark noise background
+        background-color: rgba(0,0,0,1);
         &:hover { background-color: #008; }
 
-        border: var(--scrollbar-thumb-width) solid rgba(0, 0, 0, 0);
+        border: 1px solid rgba(0, 0, 0, 0);
         background-clip: padding-box;
     }
 
     ::-webkit-resizer { background-color: #222; }
-
-    // If we're on the search view, always show the scrollbar, so it doesn't disappear and
-    // reappear as we load searches, causing the UI to shift back and forth slightly.
-    overflow-y: scroll;
-    overflow-y: overlay;
-    overflow: hidden;
 }
  
 .ppixiv-icon {
@@ -1491,6 +1482,8 @@ body.hide-r18g .r18g { display: none; }
 }
 
 .search-results {
+    // Always show the scrollbar on the search view, so it doesn't disappear and reappear as
+    // we load searches, causing the UI to shift back and forth slightly.
     overflow-y: scroll;
     overflow-y: overlay;
 
